Premier_league_crawling

--- a/Crawling/Premier_League_Crawling.ipynb
+++ b/Crawling/Premier_League_Crawling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -68,8 +68,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "tbody = driver.find_elements_by_css_selector(\"tbody.tableBodyContainer tr:not(expandable)\")[ : 39]\n",
@@ -78,66 +80,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Position</th>\n",
-       "      <th>Club</th>\n",
-       "      <th>Played</th>\n",
-       "      <th>Won</th>\n",
-       "      <th>Drawn</th>\n",
-       "      <th>Lost</th>\n",
-       "      <th>GF</th>\n",
-       "      <th>GA</th>\n",
-       "      <th>GD</th>\n",
-       "      <th>Point</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [Position, Club, Played, Won, Drawn, Lost, GF, GA, GD, Point]\n",
-       "Index: []"
-      ]
-     },
-     "execution_count": 262,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 266,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "for each in tbody : \n",
@@ -171,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -225,53 +171,53 @@
        "      <th>1</th>\n",
        "      <td>2</td>\n",
        "      <td>Manchester United</td>\n",
-       "      <td>27</td>\n",
-       "      <td>17</td>\n",
+       "      <td>28</td>\n",
+       "      <td>18</td>\n",
        "      <td>5</td>\n",
        "      <td>5</td>\n",
-       "      <td>51</td>\n",
-       "      <td>19</td>\n",
-       "      <td>+32</td>\n",
-       "      <td>56</td>\n",
+       "      <td>53</td>\n",
+       "      <td>20</td>\n",
+       "      <td>+33</td>\n",
+       "      <td>59</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>3</td>\n",
        "      <td>Liverpool</td>\n",
-       "      <td>27</td>\n",
-       "      <td>15</td>\n",
+       "      <td>28</td>\n",
+       "      <td>16</td>\n",
        "      <td>9</td>\n",
        "      <td>3</td>\n",
-       "      <td>61</td>\n",
-       "      <td>31</td>\n",
-       "      <td>+30</td>\n",
-       "      <td>54</td>\n",
+       "      <td>65</td>\n",
+       "      <td>32</td>\n",
+       "      <td>+33</td>\n",
+       "      <td>57</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>4</td>\n",
-       "      <td>Chelsea</td>\n",
-       "      <td>27</td>\n",
+       "      <td>Tottenham Hotspur</td>\n",
+       "      <td>28</td>\n",
        "      <td>16</td>\n",
+       "      <td>7</td>\n",
        "      <td>5</td>\n",
-       "      <td>6</td>\n",
-       "      <td>49</td>\n",
-       "      <td>23</td>\n",
-       "      <td>+26</td>\n",
        "      <td>53</td>\n",
+       "      <td>24</td>\n",
+       "      <td>+29</td>\n",
+       "      <td>55</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>5</td>\n",
-       "      <td>Tottenham Hotspur</td>\n",
-       "      <td>27</td>\n",
-       "      <td>15</td>\n",
-       "      <td>7</td>\n",
+       "      <td>Chelsea</td>\n",
+       "      <td>28</td>\n",
+       "      <td>16</td>\n",
        "      <td>5</td>\n",
-       "      <td>52</td>\n",
-       "      <td>24</td>\n",
-       "      <td>+28</td>\n",
-       "      <td>52</td>\n",
+       "      <td>7</td>\n",
+       "      <td>50</td>\n",
+       "      <td>25</td>\n",
+       "      <td>+25</td>\n",
+       "      <td>53</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -290,182 +236,182 @@
        "      <th>6</th>\n",
        "      <td>7</td>\n",
        "      <td>Burnley</td>\n",
-       "      <td>27</td>\n",
+       "      <td>28</td>\n",
        "      <td>9</td>\n",
+       "      <td>10</td>\n",
        "      <td>9</td>\n",
-       "      <td>9</td>\n",
-       "      <td>21</td>\n",
-       "      <td>24</td>\n",
+       "      <td>22</td>\n",
+       "      <td>25</td>\n",
        "      <td>-3</td>\n",
-       "      <td>36</td>\n",
+       "      <td>37</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>8</td>\n",
        "      <td>Leicester City</td>\n",
-       "      <td>27</td>\n",
+       "      <td>28</td>\n",
        "      <td>9</td>\n",
-       "      <td>8</td>\n",
+       "      <td>9</td>\n",
        "      <td>10</td>\n",
-       "      <td>39</td>\n",
        "      <td>40</td>\n",
+       "      <td>41</td>\n",
        "      <td>-1</td>\n",
-       "      <td>35</td>\n",
+       "      <td>36</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>9</td>\n",
        "      <td>Everton</td>\n",
-       "      <td>27</td>\n",
+       "      <td>28</td>\n",
        "      <td>9</td>\n",
        "      <td>7</td>\n",
-       "      <td>11</td>\n",
+       "      <td>12</td>\n",
        "      <td>32</td>\n",
-       "      <td>46</td>\n",
-       "      <td>-14</td>\n",
+       "      <td>47</td>\n",
+       "      <td>-15</td>\n",
        "      <td>34</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>10</td>\n",
-       "      <td>Bournemouth</td>\n",
-       "      <td>27</td>\n",
-       "      <td>8</td>\n",
-       "      <td>7</td>\n",
-       "      <td>12</td>\n",
-       "      <td>31</td>\n",
-       "      <td>41</td>\n",
-       "      <td>-10</td>\n",
-       "      <td>31</td>\n",
+       "      <td>Watford</td>\n",
+       "      <td>28</td>\n",
+       "      <td>9</td>\n",
+       "      <td>6</td>\n",
+       "      <td>13</td>\n",
+       "      <td>38</td>\n",
+       "      <td>47</td>\n",
+       "      <td>-9</td>\n",
+       "      <td>33</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
        "      <td>11</td>\n",
-       "      <td>Watford</td>\n",
-       "      <td>27</td>\n",
+       "      <td>Bournemouth</td>\n",
+       "      <td>28</td>\n",
        "      <td>8</td>\n",
-       "      <td>6</td>\n",
-       "      <td>13</td>\n",
-       "      <td>37</td>\n",
-       "      <td>47</td>\n",
+       "      <td>8</td>\n",
+       "      <td>12</td>\n",
+       "      <td>33</td>\n",
+       "      <td>43</td>\n",
        "      <td>-10</td>\n",
-       "      <td>30</td>\n",
+       "      <td>32</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
        "      <td>12</td>\n",
-       "      <td>West Ham United</td>\n",
-       "      <td>27</td>\n",
+       "      <td>Brighton and Hove Albion</td>\n",
+       "      <td>28</td>\n",
        "      <td>7</td>\n",
-       "      <td>9</td>\n",
+       "      <td>10</td>\n",
        "      <td>11</td>\n",
-       "      <td>34</td>\n",
-       "      <td>46</td>\n",
-       "      <td>-12</td>\n",
-       "      <td>30</td>\n",
+       "      <td>26</td>\n",
+       "      <td>37</td>\n",
+       "      <td>-11</td>\n",
+       "      <td>31</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
        "      <td>13</td>\n",
-       "      <td>Newcastle United</td>\n",
-       "      <td>27</td>\n",
-       "      <td>7</td>\n",
-       "      <td>7</td>\n",
-       "      <td>13</td>\n",
-       "      <td>25</td>\n",
-       "      <td>36</td>\n",
-       "      <td>-11</td>\n",
+       "      <td>West Ham United</td>\n",
        "      <td>28</td>\n",
+       "      <td>7</td>\n",
+       "      <td>9</td>\n",
+       "      <td>12</td>\n",
+       "      <td>35</td>\n",
+       "      <td>50</td>\n",
+       "      <td>-15</td>\n",
+       "      <td>30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
        "      <td>14</td>\n",
-       "      <td>Brighton and Hove Albion</td>\n",
-       "      <td>27</td>\n",
-       "      <td>6</td>\n",
-       "      <td>10</td>\n",
-       "      <td>11</td>\n",
-       "      <td>22</td>\n",
-       "      <td>36</td>\n",
-       "      <td>-14</td>\n",
+       "      <td>Huddersfield Town</td>\n",
        "      <td>28</td>\n",
+       "      <td>8</td>\n",
+       "      <td>6</td>\n",
+       "      <td>14</td>\n",
+       "      <td>25</td>\n",
+       "      <td>48</td>\n",
+       "      <td>-23</td>\n",
+       "      <td>30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
        "      <td>15</td>\n",
-       "      <td>Crystal Palace</td>\n",
+       "      <td>Newcastle United</td>\n",
+       "      <td>28</td>\n",
+       "      <td>7</td>\n",
+       "      <td>8</td>\n",
+       "      <td>13</td>\n",
        "      <td>27</td>\n",
-       "      <td>6</td>\n",
-       "      <td>9</td>\n",
-       "      <td>12</td>\n",
-       "      <td>25</td>\n",
-       "      <td>42</td>\n",
-       "      <td>-17</td>\n",
-       "      <td>27</td>\n",
+       "      <td>38</td>\n",
+       "      <td>-11</td>\n",
+       "      <td>29</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
        "      <td>16</td>\n",
-       "      <td>Swansea City</td>\n",
-       "      <td>27</td>\n",
-       "      <td>7</td>\n",
-       "      <td>6</td>\n",
-       "      <td>14</td>\n",
-       "      <td>20</td>\n",
-       "      <td>37</td>\n",
-       "      <td>-17</td>\n",
+       "      <td>Southampton</td>\n",
+       "      <td>28</td>\n",
+       "      <td>5</td>\n",
+       "      <td>12</td>\n",
+       "      <td>11</td>\n",
+       "      <td>29</td>\n",
+       "      <td>41</td>\n",
+       "      <td>-12</td>\n",
        "      <td>27</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
        "      <td>17</td>\n",
-       "      <td>Huddersfield Town</td>\n",
-       "      <td>27</td>\n",
-       "      <td>7</td>\n",
+       "      <td>Crystal Palace</td>\n",
+       "      <td>28</td>\n",
        "      <td>6</td>\n",
-       "      <td>14</td>\n",
-       "      <td>23</td>\n",
-       "      <td>47</td>\n",
-       "      <td>-24</td>\n",
+       "      <td>9</td>\n",
+       "      <td>13</td>\n",
+       "      <td>25</td>\n",
+       "      <td>43</td>\n",
+       "      <td>-18</td>\n",
        "      <td>27</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>17</th>\n",
        "      <td>18</td>\n",
-       "      <td>Southampton</td>\n",
-       "      <td>27</td>\n",
-       "      <td>5</td>\n",
-       "      <td>11</td>\n",
-       "      <td>11</td>\n",
+       "      <td>Swansea City</td>\n",
        "      <td>28</td>\n",
-       "      <td>40</td>\n",
-       "      <td>-12</td>\n",
-       "      <td>26</td>\n",
+       "      <td>7</td>\n",
+       "      <td>6</td>\n",
+       "      <td>15</td>\n",
+       "      <td>21</td>\n",
+       "      <td>41</td>\n",
+       "      <td>-20</td>\n",
+       "      <td>27</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>18</th>\n",
        "      <td>19</td>\n",
        "      <td>Stoke City</td>\n",
-       "      <td>27</td>\n",
+       "      <td>28</td>\n",
        "      <td>6</td>\n",
-       "      <td>7</td>\n",
+       "      <td>8</td>\n",
        "      <td>14</td>\n",
-       "      <td>27</td>\n",
-       "      <td>53</td>\n",
+       "      <td>28</td>\n",
+       "      <td>54</td>\n",
        "      <td>-26</td>\n",
-       "      <td>25</td>\n",
+       "      <td>26</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19</th>\n",
        "      <td>20</td>\n",
        "      <td>West Bromwich Albion</td>\n",
-       "      <td>27</td>\n",
+       "      <td>28</td>\n",
        "      <td>3</td>\n",
        "      <td>11</td>\n",
-       "      <td>13</td>\n",
-       "      <td>21</td>\n",
-       "      <td>40</td>\n",
-       "      <td>-19</td>\n",
+       "      <td>14</td>\n",
+       "      <td>22</td>\n",
+       "      <td>42</td>\n",
+       "      <td>-20</td>\n",
        "      <td>20</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -475,28 +421,28 @@
       "text/plain": [
        "   Position                      Club Played Won Drawn Lost  GF  GA   GD Point\n",
        "0         1           Manchester City     27  23     3    1  79  20  +59    72\n",
-       "1         2         Manchester United     27  17     5    5  51  19  +32    56\n",
-       "2         3                 Liverpool     27  15     9    3  61  31  +30    54\n",
-       "3         4                   Chelsea     27  16     5    6  49  23  +26    53\n",
-       "4         5         Tottenham Hotspur     27  15     7    5  52  24  +28    52\n",
+       "1         2         Manchester United     28  18     5    5  53  20  +33    59\n",
+       "2         3                 Liverpool     28  16     9    3  65  32  +33    57\n",
+       "3         4         Tottenham Hotspur     28  16     7    5  53  24  +29    55\n",
+       "4         5                   Chelsea     28  16     5    7  50  25  +25    53\n",
        "5         6                   Arsenal     27  13     6    8  51  36  +15    45\n",
-       "6         7                   Burnley     27   9     9    9  21  24   -3    36\n",
-       "7         8            Leicester City     27   9     8   10  39  40   -1    35\n",
-       "8         9                   Everton     27   9     7   11  32  46  -14    34\n",
-       "9        10               Bournemouth     27   8     7   12  31  41  -10    31\n",
-       "10       11                   Watford     27   8     6   13  37  47  -10    30\n",
-       "11       12           West Ham United     27   7     9   11  34  46  -12    30\n",
-       "12       13          Newcastle United     27   7     7   13  25  36  -11    28\n",
-       "13       14  Brighton and Hove Albion     27   6    10   11  22  36  -14    28\n",
-       "14       15            Crystal Palace     27   6     9   12  25  42  -17    27\n",
-       "15       16              Swansea City     27   7     6   14  20  37  -17    27\n",
-       "16       17         Huddersfield Town     27   7     6   14  23  47  -24    27\n",
-       "17       18               Southampton     27   5    11   11  28  40  -12    26\n",
-       "18       19                Stoke City     27   6     7   14  27  53  -26    25\n",
-       "19       20      West Bromwich Albion     27   3    11   13  21  40  -19    20"
+       "6         7                   Burnley     28   9    10    9  22  25   -3    37\n",
+       "7         8            Leicester City     28   9     9   10  40  41   -1    36\n",
+       "8         9                   Everton     28   9     7   12  32  47  -15    34\n",
+       "9        10                   Watford     28   9     6   13  38  47   -9    33\n",
+       "10       11               Bournemouth     28   8     8   12  33  43  -10    32\n",
+       "11       12  Brighton and Hove Albion     28   7    10   11  26  37  -11    31\n",
+       "12       13           West Ham United     28   7     9   12  35  50  -15    30\n",
+       "13       14         Huddersfield Town     28   8     6   14  25  48  -23    30\n",
+       "14       15          Newcastle United     28   7     8   13  27  38  -11    29\n",
+       "15       16               Southampton     28   5    12   11  29  41  -12    27\n",
+       "16       17            Crystal Palace     28   6     9   13  25  43  -18    27\n",
+       "17       18              Swansea City     28   7     6   15  21  41  -20    27\n",
+       "18       19                Stoke City     28   6     8   14  28  54  -26    26\n",
+       "19       20      West Bromwich Albion     28   3    11   14  22  42  -20    20"
       ]
      },
-     "execution_count": 267,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
