--- a/Easy/180226_Incorrect Regex.ipynb
+++ b/Easy/180226_Incorrect Regex.ipynb
@@ -50,12 +50,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      ".*\\+\n",
+      "True\n",
+      "/*+\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "for _ in range(int(input())):\n",
+    "    ans = True\n",
+    "    try:\n",
+    "        reg = re.compile(input())\n",
+    "    except re.error:\n",
+    "        ans = False\n",
+    "    print(ans)"
+   ]
   }
  ],
  "metadata": {
