--- a/Study/180321_study.ipynb
+++ b/Study/180321_study.ipynb
@@ -18,8 +18,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
+   "execution_count": 51,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from collections import Counter"
@@ -103,6 +105,246 @@
     "    result.append(alpha)\n",
     "    \n",
     "print(\"\".join(result))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 윤아님"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 수업 문제 1\n",
+    "\n",
+    "이탈리아(Italy)보다 인구수가 많고, 나라별 사용언어수가 5개 이상인 나라이름과 인구수, 언어수를 조회하세요. \n",
+    "\n",
+    "정렬은 언어수로 올림차순하고, 중복이 있으면 인구수로 내림차순하세요. \n",
+    "\n",
+    "hint : join, sub-query 사용"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2번째 문제"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10, 10\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "m, n = map(int, input().split(',')) \n",
+    "if m%n != 0 :  \n",
+    "    print(int(m/n) + 1) \n",
+    "else :\n",
+    "    print(int(m/n))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 성호님"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df2 = pd.DataFrame({ 'food' : ['bacon', 'pulled pork', 'bacon', 'Pastrami',\n",
+    "                              'corned beef', 'Bacon', 'pastrami', 'honey ham', 'nova lox'],\n",
+    "                              'ounces' : [4, 3, 12 ,6 ,7.5, 8, 3, 5, 6]})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "df2[\"food\"] = df2[\"food\"].apply(lambda x : x.lower())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "meat_to_animal = {\n",
+    "    'bacon' : 'pig',\n",
+    "    'pulled pork' : 'pig',\n",
+    "    'pastrami' : 'cow',\n",
+    "    'corned beef' : 'cow',\n",
+    "    'honey ham' : 'pig',\n",
+    "    'nova lox' : 'salmon'\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new = pd.DataFrame(columns = [\"food\", \"mta\"] )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for a, b in list(zip(meat_to_animal.keys(), meat_to_animal.values())) :\n",
+    "    new.loc[len(new)] = a, b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>food</th>\n",
+       "      <th>ounces</th>\n",
+       "      <th>mta</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>bacon</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>pig</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>bacon</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>pig</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>bacon</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>pig</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>pulled pork</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>pig</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>pastrami</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>cow</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>pastrami</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>cow</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>corned beef</td>\n",
+       "      <td>7.5</td>\n",
+       "      <td>cow</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>honey ham</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>pig</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>nova lox</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>salmon</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          food  ounces     mta\n",
+       "0        bacon     4.0     pig\n",
+       "1        bacon    12.0     pig\n",
+       "2        bacon     8.0     pig\n",
+       "3  pulled pork     3.0     pig\n",
+       "4     pastrami     6.0     cow\n",
+       "5     pastrami     3.0     cow\n",
+       "6  corned beef     7.5     cow\n",
+       "7    honey ham     5.0     pig\n",
+       "8     nova lox     6.0  salmon"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.merge(left = df2, right = new, on = 'food')"
    ]
   }
  ],
