--- a/crawling/180218_twitter_crawling.ipynb
+++ b/crawling/180218_twitter_crawling.ipynb
@@ -194,7 +194,7 @@
    },
    "outputs": [],
    "source": [
-    "twitter.nouns(\"드디어 해냈다 시발놈들아 ㅠㅠ\")"
+    "twitter.nouns(\"드디어 해냈다\")"
    ]
   },
   {
