--- a/NLP/CS224n/Lecture_1.ipynb
+++ b/NLP/CS224n/Lecture_1.ipynb
@@ -21,7 +21,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![이것이 변화](.\\1-1.png)\n",
+    "![1-1](./img/1-1.png)\n",
     "\n",
     "- NLP levels\n",
     "- speech, text로부터 시작해 점차 복잡한 형태의 레벨로 나아감"
@@ -70,7 +70,8 @@
     "\n",
     "#### Machine Learning vs Deep Learning\n",
     "- Machine learning\n",
-    "![image.png](.\\1-2.png)\n",
+    "![1-2](./img/1-2.png)\n",
+    "\n",
     "\n",
     "- Deep learning\n",
     "- Learned Featurese are easy to adppt, fast to learn \n",
@@ -92,7 +93,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![image.png](.\\1-3.png)\n",
+    "![1-3](./img/1-3.png)\n",
+    "\n",
     "표시하기 용이하게 하기위해 8차원 벡터로 나타나냈지만, 보통은 100,300, 1000차원으로도 표기"
    ]
   },
@@ -102,7 +104,7 @@
    "metadata": {},
    "source": [
     "Representations of NLP : Morphology\n",
-    "![image.png](.\\1-4.png)"
+    "![1-4](./img/1-4.png)\n"
    ]
   },
   {
@@ -110,7 +112,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![image.png](.\\1-5.png)\n",
+    "![1-5](./img/1-5.png)\n",
+    "\n",
     "- morphology 이후 문장의 의미 파악 단계, 기존에 사용하던 방법은 lambda calculus\n",
     "- 수업에선 다른 방법을 사용할 것(어떤 방법을 사용하는지 이해 못함)\n"
    ]
