--- a/Hacker_rank/Easy/180320_combinations_with_replacement.ipynb
+++ b/Hacker_rank/Easy/180320_combinations_with_replacement.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -35,12 +35,16 @@
      "output_type": "stream",
      "text": [
       "HACK 2\n",
+      "AA\n",
       "AC\n",
+      "AH\n",
       "AK\n",
+      "CC\n",
+      "CH\n",
       "CK\n",
-      "HA\n",
-      "HC\n",
-      "HK\n"
+      "HH\n",
+      "HK\n",
+      "KK\n"
      ]
     }
    ],
@@ -48,7 +52,7 @@
     "from itertools import combinations_with_replacement\n",
     "from itertools import combinations\n",
     "word, n = input().split()\n",
-    "ls = list(combinations(word, int(n)))\n",
+    "ls = list(combinations_with_replacement(sorted(word), int(n)))\n",
     "ls = [\"\".join(i) for i in ls]\n",
     "ls.sort()\n",
     "for i in ls :\n",
