still taking the lecutre 2

--- a/NLP/CS224n/Lecture_2.ipynb
+++ b/NLP/CS224n/Lecture_2.ipynb
@@ -50,6 +50,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "----"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### * 추가정보\n",
     "(https://dreamgonfly.github.io/machine/learning,/natural/language/processing/2017/08/16/word2vec_explained.html)\n",
     "** 단어를 벡터로 바꾸는 작업을 임베딩(Embedding)이라고 함 ** \n",
@@ -81,7 +88,13 @@
    ]
   },
   {
-   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "-----"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -93,14 +106,34 @@
     "- center word인 'banking'을 중심으로, 윈도우 사이즈 만큼의 옆 단어들과의 관계 고려\n",
     "- ** 한 가지 context word의 확률분포 인것을 아는 것이 중요 ** \n",
     "\n",
-    "- "
+    "#### details of word2vec\n",
+    "- 두 가지의 단어를 내적하여 소프트 맥스에 넣음\n",
+    "> 두 단어의 벡터는 두 벡터의 모든 요소를 곱한 것과 마찬가지이며, 두 벡터가 유사할수록 그 값이 커짐. "
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3. research highlight"
+    "- picure of model\n",
+    "![2-6](./img/2-6.png)\n",
+    "- 웟 한 잇코딩 형태로 벡터가 input\n",
+    "- output에서 softmax 단계에서 확률을 높이 주게 만든 것과 truth에서 1이 나온 부분이 다르다면 loss가 생길 것 -> 우리가 잘못한 부분 "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3. research highlight\n",
+    "#### 'a simple but tough-to-beat baseline for sentence embeddings'\n",
+    "\"어떻게 해야 단어 벡터와 문장 벡터가 meaning을 가지게 되는가?\"\n",
+    "- vector representation 을 sentence representation으로 변환하는 간단한 방법 : **BOW**\n",
+    "![2-7](./img/2-7.png)\n",
+    "- bow를 만드는 1단계 : 단어들의 벡터에 평균을 취하나 단어들마다 가중치를 부여\n",
+    "- bow를 만드는 2단계 : compute the first principal component"
    ]
   },
   {
