have to take it one more time later

--- a/NLP/CS224n/Lecture_2.ipynb
+++ b/NLP/CS224n/Lecture_2.ipynb
@@ -112,7 +112,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -123,7 +122,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -140,27 +138,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 4. word2vec objective function gradients"
+    "### 4. word2vec objective function gradients\n",
+    "(negative log likelihood, softmax 관련 공식 미분하는 진행 이해 못함 - 정확히는 공식에서 각 알파벳이 뜻하는 바를 모르겠음)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 5. optimization refresher"
+    "- Gradient descent 설명 -> loss function or objective function 에 대한 optimization 을 하기 위해 중요한 것은 'alpha'의 크기. w가 최소값이 될 수 있도록 충분한 크기여야함.\n",
+    "- 데이터의 크기가 엄청 커질경우 : realistic amount of time에 해결하지 못할것. \n",
+    "- Stochastic Gradient descent\n",
+    "- gradient descent의 노이즈가 커질 경우, nueral net에 긍정적인 영향을끼쳐 SGD가 나은 결과를 도출할 수 있도록 도와줌."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 6. assignment 1 notes"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "(수업 처음에 한다고 얘기는 했으나 실제로는 안한 것 같은데...)\n",
+    "\n",
+    "### 5. optimization refresher\n",
+    "### 6. assignment 1 notes\n",
     "### 7. usefulness of word2vec"
    ]
   }
